Fix code and add soft delete expertise